--- a/01-python-classes.ipynb
+++ b/01-python-classes.ipynb
@@ -7,9 +7,7 @@
    "source": [
     "## Python Classes: The Power of Object-Oriented Programming\n",
     "\n",
-    "Python supports the object-oriented programming paradigm through classes. They provide an elegant way to define reusable pieces of code that encapsulate data and behavior in a single entity.\n",
-    "\n",
-    "Python is a multiparadigm programming language that supports object-oriented programming (OOP) through classes that you can define with the class keyword. You can think of a class as a piece of code that specifies the data and behavior that represent and model a particular type of object"
+    "Python supports the object-oriented programming paradigm through classes. They provide an elegant way to define reusable pieces of code that encapsulate ***data*** and ***behavior*** in a single entity."
    ]
   },
   {
@@ -19,7 +17,45 @@
    "source": [
     "What is a class in Python? A common analogy is that a class is like the blueprint for a house. You can use the blueprint to create several houses and even a complete neighborhood. Each concrete house is an object or instance that’s derived from the blueprint.\n",
     "\n",
-    "In OOP, you commonly use the term attributes to refer to the properties or data associated with a specific object of a given class. In Python, attributes are variables defined inside a class with the purpose of storing all the required data for the class to work."
+    "In Python, attributes are variables defined inside a class with the purpose of storing all the required data for the class to work.\n",
+    "\n",
+    "Methods are functions that you define within a class. These functions typically operate on or with the attributes of the underlying instance or class. Attributes and methods are collectively referred to as ***members*** of a class or object."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>The sample example of synatx</p>\n",
+    "<pre><code>\n",
+    "    class ClassName:\n",
+    "        # Class body\n",
+    "        pass\n",
+    "</code></pre>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "\"\"\"\n",
+    "Define Circle using the class keyword. \n",
+    "Inside the class, you write two methods. \n",
+    "The .__init__() method has a special meaning in Python classes. \n",
+    "This method is known as the object initializer because it defines and sets the initial values for your attributes.\n",
+    "\"\"\"\n",
+    "\n",
+    "class Circle:\n",
+    "    def __init__(self, radius) -> None:\n",
+    "        self.radius = radius\n",
+    "\n",
+    "    def calculate_area(self):\n",
+    "        return round(math.pi * self.radius ** 2, 2)\n"
    ]
   },
   {
@@ -31,8 +67,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv-tutorials",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
