Changes to python class tutorial

--- a/01-python-class-tutorial.ipynb
+++ b/01-python-class-tutorial.ipynb
@@ -55,7 +55,7 @@
     "        self.radius = radius\n",
     "\n",
     "    def calculate_area(self):\n",
-    "        return round(math.pi * self.radius ** 2, 2)\n"
+    "        return round(math.pi * self.radius ** 2, 2)"
    ]
   },
   {
