--- a/03-advent-of-code-2021/01-sonar-sweep/01-sonar-sweep.ipynb
+++ b/03-advent-of-code-2021/01-sonar-sweep/01-sonar-sweep.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -184,16 +184,309 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1292\n"
+     ]
+    }
+   ],
    "source": [
     "with open(INPUT_FILE) as f:\n",
     "    depths = f.readlines()\n",
     "\n",
     "count = 0\n",
-    "for i, num in enumerate(d)"
+    "for i, num in enumerate(depths[:-1]):\n",
+    "    if int(num) < int(depths[i+1]):\n",
+    "        count += 1\n",
+    "\n",
+    "print(count)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to make this work, we are using a slice to ignore the last element from `depths`.\n",
+    "After all, the slice `[:-n]` means [“drop the last `n` elements”](https://mathspp.com/blog/pydonts/idiomatic-sequence-slicing#s-n-3).\n",
+    "\n",
+    "Another interesting thought would be to try and simplify the `i + 1` part.\n",
+    "The built-in `enumerate` accepts a `start` argument that specifies where the argument starts counting:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 'c'), (1, 'o'), (2, 'd'), (3, 'e')]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(enumerate('code'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 c\n",
+      "2 o\n",
+      "3 d\n",
+      "4 e\n"
+     ]
+    }
+   ],
+   "source": [
+    "for next_idx, num in enumerate('code', start=1):\n",
+    "    print(next_idx, num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Therefore, one might think that we could set `start=1` to avoid having to perform the sum.\n",
+    "If we do so, then we must be very explicit about what index we are using:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1292\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(INPUT_FILE, \"r\") as f:\n",
+    "    depths = f.readlines()\n",
+    "\n",
+    "count = 0\n",
+    "for next_idx, num in enumerate(depths[:-1], start=1):\n",
+    "    if int(num) < int(depths[next_idx]):\n",
+    "        count += 1\n",
+    "\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However, I personally don't like this.\n",
+    "There is something here that makes me look for a better solution, although some might say I'm just being paranoid.\n",
+    "But, the truth is, our `if` statement is very asymmetrical right now.\n",
+    "\n",
+    "The solution lies elsewhere!\n",
+    "The built-in `zip` is more correct here, because `zip` is used to pair sequences up.\n",
+    "But what sequences do we want to pair up..?\n",
+    "After all, we have a single sequence at hands!\n",
+    "\n",
+    "As it turns out, the both patterns of “this item & the next one” and “this item & the previous one” are easily written with `zip`.\n",
+    "We just have to remember that, if `seq` is a sequence, then `seq[1:]` means “drop the first element” and `seq[:-1]` means “drop the last element”:\n",
+    "\n",
+    "![](zip_pairwise.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "code\n",
+      "oder\n",
+      "[('c', 'o'), ('o', 'd'), ('d', 'e'), ('e', 'r')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = 'coder'\n",
+    "print(s[:-1])\n",
+    "print(s[1:])\n",
+    "print(list(zip(s[:-1], s[1:])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1292\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(INPUT_FILE, \"r\") as f:\n",
+    "    depths = f.readlines()\n",
+    "\n",
+    "count = 0\n",
+    "for prev_, next_ in zip(depths[:-1], depths[1:]):\n",
+    "    if int(prev_) < int(next_):\n",
+    "        count +=1\n",
+    "\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the above, I wrote the name `next_` because `next` is a built-in function.\n",
+    "Then, I decided to use `prev_` instead of `prev` just for symmetry.\n",
+    "You can pick any other two names you prefer, or use `for prev, next_ in ...`.\n",
+    "\n",
+    "To simplify things a bit, especially when doing a similar thing with three or more iterables, we can actually omit the slices that are cutting from the end, because `zip` stops as soon as one iterable stops.\n",
+    "In other words, we don't need to specify `depths[:-1]`:\n",
+    "\n",
+    "![](zip_stops_shortest.png)\n",
+    "\n",
+    "With that in mind, we can remove the extra slice:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1292\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(INPUT_FILE, \"r\") as f:\n",
+    "    depths = f.readlines()\n",
+    "\n",
+    "count = 0\n",
+    "for prev_, next_ in zip(depths, depths[1:]):\n",
+    "    if int(prev_) < int(next_):\n",
+    "        count += 1\n",
+    "\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Repeated `int` conversions\n",
+    "\n",
+    "If you look closely at the `for` loop we are writing, you will notice that most of the values in `depth` are going to be passed in to the built-in `int` twice.\n",
+    "While that's not a terrible thing, it's _double_ the work we need.\n",
+    "All we need is for each number to be converted once, right?\n",
+    "\n",
+    "Therefore, we can do the `int` conversion a bit earlier in the process:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1292\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(INPUT_FILE, \"r\") as f:\n",
+    "    depths = f.readlines()\n",
+    "\n",
+    "depths = [int(d) for d in depths]\n",
+    "count = 0\n",
+    "for prev_, next_ in zip(depths, depths[1:]):\n",
+    "    if prev_ < next_:\n",
+    "        count+=1\n",
+    "\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Of course, now we have another issue of repeated work: first, we go over the whole file to read the lines with `.readlines`, and then we go over the file contents to convert everything into an integer.\n",
+    "We can do everything at once, if we convert the lines to integers _while_ we read them:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1292\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(INPUT_FILE, \"r\") as f:\n",
+    "    depths = [int(line) for line in f]\n",
+    "\n",
+    "count = 0\n",
+    "for prev_, next_ in zip(depths, depths[1:]):\n",
+    "    if prev_ < next_:\n",
+    "        count += 1\n",
+    "    \n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In case you didn't know, [you can iterate over a file](https://mathspp.com/blog/til/006), which allows you to iterate over the lines.\n",
+    "That's what allowed us to convert into integers all the lines.\n",
+    "\n",
+    "On top of that, you might be interested in knowing that [`int` is forgiving](https://twitter.com/mathsppblog/status/1466190674030698499), in that it allows the integers to be surrounded by whitespace:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
