Problem Statement 1 - A really big file

--- a/03-advent-of-code-2021/01-sonar-sweep/01-sonar-sweep.ipynb
+++ b/03-advent-of-code-2021/01-sonar-sweep/01-sonar-sweep.ipynb
@@ -482,6 +482,125 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A really long input file\n",
+    "\n",
+    "Like I mentioned earlier, we need to consider if our input file fits into memory or not.\n",
+    "Up to now, we have been reading the whole file at once, but we don't need to!\n",
+    "We just saw we can iterate over `f` lazily, so we can leverage that for our own solution.\n",
+    "\n",
+    "When we do that, notice that throughout our comparison loop we will need to be reading new values from the file.\n",
+    "Thus, if the file is large and we can't read all of it at once, we need to keep it open.\n",
+    "In other words, we have to indent our code again.\n",
+    "\n",
+    "On top of that, because we are assuming the file is _very_ big, we can no longer create the list of `depths`!\n",
+    "Thus, we have two options:\n",
+    "\n",
+    " - we can write a _generator expression_ for `depths`; or\n",
+    " - we can use a `map` with `map(int, f)`.\n",
+    "\n",
+    "Using a generator expression entails converting the `[ ... ]` in the list comprehension to `( ... )`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'generator' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[29], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m depths \u001b[38;5;241m=\u001b[39m (\u001b[38;5;28mint\u001b[39m(line) \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m f)\n\u001b[1;32m      4\u001b[0m count \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m prev_, next_ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(depths, \u001b[43mdepths\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m):\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m prev_ \u001b[38;5;241m<\u001b[39m next_:\n\u001b[1;32m      7\u001b[0m         count \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'generator' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "with open(INPUT_FILE, \"r\") as f:\n",
+    "    depths = (int(line) for line in f)\n",
+    "\n",
+    "    count = 0\n",
+    "    for prev_, next_ in zip(depths, depths[1:]):\n",
+    "        if prev_ < next_:\n",
+    "            count += 1\n",
+    "\n",
+    "    print(count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However, as we do so, the `depths[1:]` stops working because generators are not indexable/sliceable.\n",
+    "This shows a weakness in our solution!\n",
+    "\n",
+    "Thankfully, there are two good solutions!\n",
+    "Starting with Python 3.10, there is a function called `itertools.pairwise` that implements the exact `zip` pattern we wanted:\n",
+    "\n",
+    "If you don't have Python 3.10 (or older), you can define your own `pairwise` using `itertools.tee`.\n",
+    "\n",
+    "This isn't beginner-level Python, so feel free to skip this bit:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import tee\n",
+    "\n",
+    "def pairwise(it):\n",
+    "    \"\"\"Mock `itertools.pairwise` for Python versions below 3.10.\"\"\"\n",
+    "    prev_, next_ = tee(it, 2)     # Split `it` into two iterables.\n",
+    "    next(next_)                   # Advance once.\n",
+    "    yield from zip(prev_, next_)  # Yield the pairs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1292\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(INPUT_FILE, \"r\") as f:\n",
+    "    depths = (int(line) for line in f)\n",
+    "    \n",
+    "    count = 0\n",
+    "    for prev_, next_ in pairwise(depths):\n",
+    "        if prev_ < next_:\n",
+    "            count += 1\n",
+    "    print(count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One thing I want you to understand, and that may go unnoticed because of the structure of the analysis above, is that using `itertools.pairwise` is a good idea regardless of whether we have this “really big file” or not.\n",
+    "In fact, `pairwise` is the tool to go for when you want to implement the pattern `zip(seq, seq[1:])`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
