Problem Statement 2 - Starts

--- a/03-advent-of-code-2021/01-sonar-sweep/01-sonar-sweep.ipynb
+++ b/03-advent-of-code-2021/01-sonar-sweep/01-sonar-sweep.ipynb
@@ -598,7 +598,191 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Counting by incrementing\n",
+    "\n",
+    "In all of the solutions above we have been counting by incrementing the `count` variable only when the depth test passes.\n",
+    "However, there is a different approach to this, inspired by the languages where Boolean values are just 0s and 1s.\n",
+    "Instead of checking with an `if`, we can just add the value of the condition to `count`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1292\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(INPUT_FILE, \"r\") as f:\n",
+    "    depths = (int(line) for line in f)\n",
+    "\n",
+    "    count = 0\n",
+    "    for prev_, next_ in pairwise(depths):\n",
+    "        count += prev_ < next_\n",
+    "    \n",
+    "    print(count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When `prev_ < next_` is `True` (and the `if` statement would pass the test, incrementing `count` by one), the statement `count += True` increments `count` by one.\n",
+    "When `prev_ < next_` is `False` (and the `if` statement would not increment `count`), the statement `count += False` increments `count` by zero.\n",
+    "\n",
+    "After all, Boolean values can be treated as integers:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 + True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 + False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This has to be used with caution, though, and is not _always_ advisable.\n",
+    "\n",
+    "Here's a short aside:\n",
+    "a context in which this is good is in the context of data science, when you're using Pandas to analyse Boolean columns.\n",
+    "If you have a dataframe `df` and a Boolean column `df[\"bc\"]`, then `df[\"bc\"].sum()` uses this same principle to count how many rows are `True`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Summing the conditions\n",
+    "\n",
+    "However, moving the condition to the value that is being incremented gives rise to another implementation.\n",
+    "\n",
+    "After all, the pattern\n",
+    "\n",
+    "```py\n",
+    "accumulator = 0\n",
+    "for element in iterable:\n",
+    "    accumulator += foo(element)\n",
+    "```\n",
+    "\n",
+    "is equivalent to\n",
+    "\n",
+    "```py\n",
+    "sum(foo(element) for element in iterable)\n",
+    "```\n",
+    "\n",
+    "Therefore, we can rewrite our solution to be a sum:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1292\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(INPUT_FILE, \"r\") as f:\n",
+    "    depths = (int(line) for line in f)\n",
+    "\n",
+    "    count = sum(prev_ < next_ for prev_, next_ in pairwise(depths))\n",
+    "    print(count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 2 problem statement\n",
+    "\n",
+    "(Adapted from [Advent of Code 2021, day 1](https://adventofcode.com/2021/day/1))\n",
+    "\n",
+    "Instead of comparing consecutive values, consider sums of a three-measurement sliding window. Again considering the example below:\n",
+    "\n",
+    "```txt\n",
+    "199  A      \n",
+    "200  A B    \n",
+    "208  A B C  \n",
+    "210    B C D\n",
+    "200      C D E\n",
+    "207        D E F\n",
+    "240          E F G\n",
+    "269            F G H\n",
+    "260              G H\n",
+    "263                H\n",
+    "```\n",
+    "\n",
+    "Start by comparing the first and second three-measurement windows. The measurements in the first window are marked A (199, 200, 208); their sum is 199 + 200 + 208 = 607. The second window is marked B (200, 208, 210); its sum is 618. The sum of measurements in the second window is larger than the sum of the first, so this first comparison **increased**.\n",
+    "\n",
+    "Your goal now is to count **the number of times the sum of measurements in this sliding window increases** from the previous sum. So, compare A with B, then compare B with C, then C with D, and so on. Stop when there aren't enough measurements left to create a new three-measurement sum.\n",
+    "\n",
+    "In the above example, the sum of each three-measurement window is as follows:\n",
+    "\n",
+    "```\n",
+    "A: 607 (N/A - no previous sum)\n",
+    "B: 618 (increased)\n",
+    "C: 618 (no change)\n",
+    "D: 617 (decreased)\n",
+    "E: 647 (increased)\n",
+    "F: 716 (increased)\n",
+    "G: 769 (increased)\n",
+    "H: 792 (increased)\n",
+    "```\n",
+    "\n",
+    "In this example, there are 5 sums that are larger than the previous sum.\n",
+    "\n",
+    "Consider sums of a three-measurement sliding window. How many sums are larger than the previous sum in the input file `input.txt`?\n",
+    "\n",
+    "_You should arrive at the answer 1262._"
+   ]
   },
   {
    "cell_type": "code",
