baseline sol for 03

--- a/03-advent-of-code-2021/03-binary-diagnostic/03-binary-diagnostic.ipynb
+++ b/03-advent-of-code-2021/03-binary-diagnostic/03-binary-diagnostic.ipynb
@@ -1,6 +1,96 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 1 problem statement\n",
+    "\n",
+    "(Adapted from [Advent of Code 2021, day 3](https://adventofcode.com/2021/day/3))\n",
+    "\n",
+    "You are given a list of binary numbers.\n",
+    "You need to use the binary numbers in that list to generate two new binary numbers (called the **gamma rate** and the **epsilon rate**).\n",
+    "\n",
+    "Each bit in the gamma rate can be determined by finding the most common bit in the corresponding position of all numbers in the list.\n",
+    "For example, given the following list:\n",
+    "\n",
+    "```txt\n",
+    "00100\n",
+    "11110\n",
+    "10110\n",
+    "10111\n",
+    "10101\n",
+    "01111\n",
+    "00111\n",
+    "11100\n",
+    "10000\n",
+    "11001\n",
+    "00010\n",
+    "01010\n",
+    "```\n",
+    "\n",
+    "Considering only the first bit of each number, there are five `0` bits and seven `1` bits. Since the most common bit is `1`, the first bit of the gamma rate is `1`.\n",
+    "\n",
+    "The most common second bit of the numbers in the diagnostic report is `0`, so the second bit of the gamma rate is `0`.\n",
+    "\n",
+    "The most common value of the third, fourth, and fifth bits are `1`, `1`, and `0`, respectively, and so the final three bits of the gamma rate are `110`.\n",
+    "\n",
+    "So, the gamma rate is the binary number `10110`, or `22` **in decimal**.\n",
+    "\n",
+    "The epsilon rate is calculated in a similar way; rather than use the most common bit, the least common bit from each position is used. So, the epsilon rate is `01001`, or `9` **in decimal**. Multiplying the gamma rate (`22`) by the epsilon rate (`9`) gives `198`.\n",
+    "\n",
+    "**Use the binary numbers in your input list to calculate the gamma rate and epsilon rate, then multiply them together.** What do you get? (Be sure to represent your answer in decimal, not binary.)\n",
+    "\n",
+    "_Using the input file `input.txt`, the result should be 749376._"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "INPUT_FILE = \"input.txt\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "749376\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(INPUT_FILE, 'r') as f:\n",
+    "    lines = [line.strip() for line in f]\n",
+    "\n",
+    "gamma, epsilon = \"\", \"\"\n",
+    "for col in range(len(lines[0])):\n",
+    "    # Count zeros and ones in this column\n",
+    "    zeroes, ones = 0, 0\n",
+    "    for line in lines:\n",
+    "        if line[col] == \"0\":\n",
+    "            zeroes += 1\n",
+    "        else:\n",
+    "            ones += 1    \n",
+    "    # Update gamma and epsilon  based on the most common bit\n",
+    "    if zeroes > ones:\n",
+    "        gamma += \"0\"\n",
+    "        epsilon += \"1\"\n",
+    "    else:\n",
+    "        gamma += \"1\"\n",
+    "        epsilon += \"0\"\n",
+    "\n",
+    "print(int(gamma, 2) * int(epsilon, 2))\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -15,7 +105,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.6"
   }
  },
